dfir_rs/tests/compile-fail-stable/surface_loop_missing_windowing.stderr
error: Operator `null(...)` entering a loop context must be a windowing operator, but is not.
 --> tests/compile-fail-stable/surface_loop_missing_windowing.rs:5:18
  |
5 |             a -> null();
  |                  ^^^^

error[E0599]: no method named `run_available_sync` found for unit type `()` in the current scope
 --> tests/compile-fail-stable/surface_loop_missing_windowing.rs:8:8
  |
8 |     df.run_available_sync();
  |        ^^^^^^^^^^^^^^^^^^ method not found in `()`
